Updating import of examples and setup.py

--- a/examples/notebook/test_functionality.ipynb
+++ b/examples/notebook/test_functionality.ipynb
@@ -96,15 +96,21 @@
     "from gt4py.cartesian.gtscript import PARALLEL, computation, interval\n",
     "\n",
     "from ndsl.dsl.typing import Float, FloatField, FloatFieldIJ\n",
-    "from ndsl.comm.communicator import Communicator, CubedSphereCommunicator\n",
-    "from ndsl.dsl.stencil import StencilFactory, GridIndexing\n",
-    "from ndsl.initialization import SubtileGridSizer\n",
-    "from ndsl.initialization.allocator import QuantityFactory\n",
-    "from ndsl.quantity import Quantity\n",
-    "from ndsl.comm.partitioner import CubedSpherePartitioner, TilePartitioner\n",
-    "from ndsl.constants import X_DIM, Y_DIM, Z_DIM\n",
-    "from ndsl.dsl.stencil_config import CompilationConfig, StencilConfig\n",
-    "from ndsl.dsl.dace.wrapped_halo_exchange import WrappedHaloUpdater"
+    "from ndsl import (\n",
+    "    CompilationConfig,\n",
+    "    CubedSphereCommunicator,\n",
+    "    CubedSpherePartitioner,\n",
+    "    GridIndexing,\n",
+    "    Quantity,\n",
+    "    QuantityFactory,\n",
+    "    StencilConfig,\n",
+    "    StencilFactory,\n",
+    "    SubtileGridSizer,\n",
+    "    TilePartitioner,\n",
+    "    WrappedHaloUpdater,\n",
+    ")\n",
+    "from ndsl.typing import Communicator\n",
+    "from ndsl.constants import X_DIM, Y_DIM, Z_DIM"
    ]
   },
   {
